image jump fix

--- a/assets/blog/style2.css
+++ b/assets/blog/style2.css
@@ -296,6 +296,22 @@
     padding: 15px 30px;
 }
 
+/* images jumping fix */
+
+.image-container {
+    position: relative;
+    padding-bottom: 75%; /* ratio of image height to width */
+    height: 0;
+    overflow: hidden;
+}
+   
+.image-container img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+}
+
 
 
 /* add to calendar page*/
@@ -443,6 +459,7 @@
 
 .android .button {
     margin-bottom: 10px;
+    padding: 0px;
 }
 
 .android .android-btn-ghost {
